# sc2ts

./: CHANGELOG.md  README.md  codecov.yml  prek.toml  pyproject.toml
.github/workflows/: docs.yml  integration.yml  lint.yml  python-packaging.yml  tests.yml  wheels.yml
docs/: _config.yml  _toc.yml  example_config.toml  inference.md  make_sc2ts_arg_subset.py  make_viridian_subset.py
notebooks/: qc-template.ipynb
sc2ts/: __init__.py  cli.py  core.py  data_import.py  dataset.py  debug.py  inference.py  jit.py  stats.py  tree_ops.py  validation.py
tests/: sc2ts_fixtures.py  test_api.py  test_cli.py  test_dataset.py  test_debug.py  test_inference.py  test_jit.py  test_tree_ops.py  util.py
tests/data/: make_ba2_recomb.py
