[project]
name = "sc2ts"
description = "Infer ARGs for SARS-Cov2 in tskit format"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Jerome Kelleher", email = "jerome.kelleher@bdi.ox.ac.uk"},
]
requires-python = ">=3.10"
dependencies = [
  "tskit>=1.0.0",
  "tszip",
  "pandas",
  "tqdm",
  "zarr<3",
  "click>=8.2",
  # Not strictly needed for base functionality, but easier to include
  # as imported by the CLI
  "tomli",
  "humanize",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://tskit.dev/sc2ts"
Documentation = "https://tskit.dev/sc2ts/docs/"
"Bug Tracker" = "https://github.com/tskit-dev/sc2ts/issues"
GitHub = "https://github.com/tskit-dev/sc2ts/"

[project.scripts]
sc2ts = "sc2ts.cli:cli"

[project.optional-dependencies]
inference = [
  "scipy",
  "biotite",
  "tsinfer>=0.5",
  "pyfaidx",
  "numba",
]
debug = [
  "matplotlib",
  "IPython",
]

[dependency-groups]
test = [
  "msprime",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "sgkit",
  "tomli-w",
  # inference and debug deps needed by the test suite
  "scipy",
  "biotite",
  "tsinfer>=0.5",
  "pyfaidx",
  "numba",
  "matplotlib",
  "IPython",
]
docs = [
  "jupyter-book",
  "sphinx-book-theme",
  "sphinx-copybutton",
  "sphinx-click",
  "setuptools_scm",
  "sphinx-argparse",
  "sphinx-issues",
  "IPython",
  # docs require running the CLI, which means the full inference deps are needed
  "scipy",
  "biotite",
  "tsinfer>=0.5",
  "pyfaidx",
  "numba",
]
lint = [
  "ruff==0.15.1",
  "prek==0.3.3",
]
packaging = [
  "twine",
  "validate-pyproject[all]",
]
dev = [
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "packaging"},
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sc2ts"]

[tool.setuptools_scm]
write_to = "sc2ts/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
target-version = "py310"
line-length = 89

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
fixable = ["ALL"]
